# scriptwriter

./: .gitignore  COMPLETE_FEATURE_SUMMARY.md  README.md  diagnose-read-aloud.sh  fix-voice-typing.sh  run-dev.sh  test-tts.sh
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: tauri.ts
ml/: README.md  pyproject.toml
ml/scriptwriter_ml/: __init__.py  cli.py  llm.py  models.py  stt.py  transliteration.py  tts.py
ml/scriptwriter_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: auth.rs  commands.rs  error.rs  filesystem.rs  lib.rs  ml_bridge.rs  models.rs  state.rs
