[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "macros", "sqlite"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
serde_with = "3.15.0"
directories = "6.0.0"
once_cell = "1.21.3"
uuid = { version = "1.18.1", features = ["v4"] }
argon2 = { version = "0.5.3", features = ["std"] }
password-hash = "0.5.0"
rand = "0.9.2"
walkdir = "2.5.0"
sanitize-filename = "0.6.0"
